--- a/index.css
+++ b/index.css
@@ -57,9 +57,9 @@
   /* padding: 20px 0; */
 }
 
-/* ------------ Start of Navigation Styles */
+/* Start of Navigation Styles */
 .grid-container header {
-  background-color: #286086;
+  background-color: #000034;
   text-align: center;
   padding: 24px 0;
 }
@@ -68,10 +68,11 @@
   display: inline;
   padding: 0em 1.5em 0em 1.5em;
   font-size: 1.4em;
+  color: white;
 }
-/* ------------ End of Navigation Styles */
+/* End of Navigation Styles */
 
-/* ------------ Start of Banner Container Styles */
+/* Start of Banner Container Styles */
 #banner-container {
   position: relative;
   text-align: center;
@@ -99,4 +100,76 @@
 .title-container h4 {
   font-size: 25px;
 }
-/* ------------ End of Banner Container Styles */
+/* End of Banner Container Styles */
+
+/* Start of Three Column Container */
+#first-container {
+  /* background-color: rgb(212, 99, 99); */
+  padding-top: 4.9vh;
+  height: 41vh;
+  max-height: 500px;
+}
+
+.first-inner-container {
+  /* background-color: gold; */
+  height: 100%;
+  margin-left: 10%;
+  margin-right: 10%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.column-container {
+  flex: 0.3;
+  /* background-color: blue; */
+  width: 50%;
+  display: flex;
+  border: 1px solid gray;
+}
+
+.column-container img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.inner-column {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(156, 158, 168, 0.699);
+}
+
+.inner-column img {
+  flex: 1;
+}
+
+.inner-column h2 {
+  flex: 0.2;
+  font-size: 1em;
+  padding: 0.4em 0 0 0.6em;
+}
+
+.inner-column p {
+  flex: 1;
+  font-size: 0.9em;
+  padding: 0.4em 0 0 0.6em;
+}
+
+.inner-column .button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 6vh;
+}
+
+.inner-column button {
+  flex: 0.5;
+  font-size: 0.9em;
+  background-color: #178a27;
+  color: white;
+  border-radius: 10%;
+  padding: 0.6em;
+}
+
+
+
+/* End of Three Column Container */
