--- a/index.css
+++ b/index.css
@@ -315,9 +315,9 @@
 .contact-container {
   display: flex;
   /* flex-direction: column; */
-  background-color: goldenrod;
+  /* background-color: goldenrod; */
   width: 100%;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   margin-top: 30px;
 }
 
@@ -325,19 +325,57 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  margin-right: 15px;
 }
 
 .input-container > input {
   margin-bottom: 15px;
+  padding: 6px 12px;
+  font-size: 0.7em;
+  line-height: 1.4;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.8)
 }
 
 .text-container {
   flex: 1;
+  margin-left: 15px;
+  margin-bottom: 15px;
 }
 
 .text-container textarea {
   flex: 1;
   height: 100%;
   width: 100%;
+  font-size: 0.7em;
+  line-height: 1.4;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 6px 12px;
+}
+
+.item8-items button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  text-transform: capitalize;
+  border-radius: 5px;
+  padding: 10px 30px 10px 30px;
+  border: 1px solid #cdcdcd;
+  margin-top: 10px;
+  background-color: rgb(17, 2, 2);
+  color: white;
 }
 /* End of Eight Column Container */
+
+/* Start of Footer Container */
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 35px 0 35px 0;
+  font-size: 0.9em;
+  background-color: #000034;
+  color: white;
+}
